<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutConstraint_WeatherInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_tittle_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gL_center_margin_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="366dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gL_bottom_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gL_center_margin_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/txtView_City"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:singleLine="true"
        android:text="@string/str_cityname"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gl_tittle_margin" />


    <TextView
        android:id="@+id/txtView_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:singleLine="true"
        android:text="@string/str_date"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_City" />

    <TextView
        android:id="@+id/txtView_ClearStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="148dp"
        android:layout_marginTop="192dp"
        android:singleLine="true"
        android:text="@string/str_dummystaus"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Date" />

    <TextView
        android:id="@+id/txtView_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="216dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/str_temp"
        android:textColor="@color/white"
        android:textSize="75sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Date" />

    <TextView
        android:id="@+id/txtView_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:textSize="15sp"
        android:singleLine="true"
        android:text="@string/str_mintemperature"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@+id/txtView_temp" />


    <TextView
        android:id="@+id/txtView_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        android:singleLine="true"
        android:text="@string/str_temp_max"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/gl_right_margin"
        app:layout_constraintTop_toBottomOf="@+id/txtView_temp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gL_weather_components"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <!--Sunrise Layout Start here-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layourConst_sunrise"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:background="@color/bg_gradient_component"
        app:layout_constraintStart_toEndOf="@id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@+id/gL_weather_components">

        <ImageView
            android:id="@+id/ImgView_sunrise"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/sunrise"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtView_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:singleLine="true"
            android:text="@string/str_sunrise"
            android:textColor="@color/color_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImgView_sunrise" />

        <TextView
            android:id="@+id/txtView_sunrisetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:text="@string/str_sunrise_time"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtView_sunrise" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Sunrise Layout End here-->

    <!--Sunset Layout Start here-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCons_sunset"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:layout_marginStart="17dp"
        android:background="@color/bg_gradient_component"
        app:layout_constraintStart_toEndOf="@id/layourConst_sunrise"
        app:layout_constraintTop_toBottomOf="@+id/gL_weather_components">

        <ImageView
            android:id="@+id/ImgView_sunset"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/sunset"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtView_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:singleLine="true"
            android:text="@string/str_sunset"
            android:textColor="@color/color_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImgView_sunset" />

        <TextView
            android:id="@+id/txtView_sunsetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:text="@string/str_sunrise_time"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtView_sunset" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Sunset Layout End here-->

    <!--Wind Layout Start here-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCons_wind"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:background="@color/bg_gradient_component"
        app:layout_constraintEnd_toStartOf="@id/gl_right_margin"
        app:layout_constraintTop_toBottomOf="@+id/gL_weather_components">

        <ImageView
            android:id="@+id/ImgView_wind"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/wind"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtView_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:singleLine="true"
            android:text="@string/str_wind"
            android:textColor="@color/color_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImgView_wind" />

        <TextView
            android:id="@+id/txtView_windTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/str_windvalue"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtView_wind" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Wind Layout End here-->

    <!--Pressure Layout Start here-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layourConst_pressure"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:background="@color/bg_gradient_component"
        app:layout_constraintStart_toEndOf="@id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@+id/layoutCons_wind">

        <ImageView
            android:id="@+id/ImgView_pressure"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/pressure"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtView_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:singleLine="true"
            android:text="@string/str_pressure"
            android:textColor="@color/color_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImgView_pressure" />

        <TextView
            android:id="@+id/txtView_pressure_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/str_pressurevalue"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtView_pressure" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Pressure Layout End here-->

    <!--Humidity Layout Start here-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layourConst_humidity"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:background="@color/bg_gradient_component"
        app:layout_constraintStart_toEndOf="@id/layourConst_pressure"
        app:layout_constraintTop_toBottomOf="@+id/layoutCons_sunset">

        <ImageView
            android:id="@+id/ImgView_humidity"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/humidity"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtView_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:singleLine="true"
            android:text="@string/str_humidity"
            android:textColor="@color/color_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImgView_humidity" />

        <TextView
            android:id="@+id/txtView_humidity_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/str_humidityvalue"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtView_humidity" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Humidity Layout End here-->

    <!--About Layout Start here-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layourConst_about"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@color/bg_gradient_component"
        app:layout_constraintEnd_toStartOf="@id/gl_right_margin"
        app:layout_constraintTop_toBottomOf="@+id/layoutCons_wind">

        <ImageView
            android:id="@+id/ImgView_about"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/info"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtView_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:singleLine="true"
            android:text="@string/str_about"
            android:textColor="@color/color_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImgView_about" />

        <TextView
            android:id="@+id/txtView_aboutdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:text="@string/str_desc"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtView_about" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--About Layout End here-->
</androidx.constraintlayout.widget.ConstraintLayout>